RESOLVED FIXED301724
Temporal: Wrong result with instant rounding and halfCeil rounding mode
https://bugs.webkit.org/show_bug.cgi?id=301724
Summary Temporal: Wrong result with instant rounding and halfCeil rounding mode
Tim Chevalier
Reported 2025-10-30 16:24:03 PDT
The following: ``` Temporal.Instant.from("1938-04-24T22:13:20Z").round({smallestUnit: 'hour', roundingIncrement: 1, roundingMode: 'halfCeil' }) ``` should print ``` 1938-04-24T22:00:00Z ``` but the result in JSC is: ``` 1938-04-24T23:00:00Z ```
Attachments
Tim Chevalier
Comment 1 2025-10-30 16:26:12 PDT
EWS
Comment 2 2025-10-31 13:37:52 PDT
Committed 302403@main (045895518592): <https://commits.webkit.org/302403@main> Reviewed commits have been landed. Closing PR #53228 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-31 13:38:12 PDT
Note You need to log in before you can comment on or make changes to this bug.