[Temporal] Fix rounding bug with instants and halfCeil rounding mode https://bugs.webkit.org/show_bug.cgi?id=301724

Reviewed by Yusuke Suzuki.

roundNumberToIncrementAsIfPositive() wasn't following the spec.

* JSTests/stress/temporal-instant.js:
(shouldNotBe):
* Source/JavaScriptCore/runtime/TemporalObject.cpp:
(JSC::roundNumberToIncrementAsIfPositive):

Canonical link: https://commits.webkit.org/302403@main