JSTests/stress/temporal-instant.js
@@ -245,6 +245,11 @@ shouldThrow(() => new Temporal.Instant('abc123'), SyntaxError);
         const i5 = Temporal.Instant.from('1999-12-31T23:59:59.999999999Z');
         shouldBe(i5.toString({ fractionalSecondDigits: 8, roundingMode: 'halfExpand' }), '2000-01-01T00:00:00.00000000Z');
     }
+    {
+        // round to nearest hour with halfCeil
+        const i7 = new Temporal.Instant(-1000000000000000000n);
+        shouldBe(i7.round({smallestUnit: 'hour', roundingIncrement: 1, roundingMode: 'halfCeil' }).toString(), "1938-04-24T22:00:00Z");
+    }
 }
 
 // leap second is constrained
